--- a/public/styles.css
+++ b/public/styles.css
@@ -28,7 +28,11 @@ header h1 {
 
 footer {
   position: absolute;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
   text-align: center;
+  background-color: #2f2839;
+  margin: auto -16px;
+  padding: 16px 32px;
   bottom: 0;
   width: 100%;
   height: 2.5rem;
