--- a/public/styles.css
+++ b/public/styles.css
@@ -25,6 +25,34 @@ header h1 {
   font-family: "McLaren", cursive;
   font-weight: 200;
 }
+.parent_container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30px;
+}
+.container{
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #2f2839;
+  color: white;
+  width: 350px;
+  height: 450px;
+  border-radius: 7px;
+  box-shadow: 0 2px 5px #ccc;
+  padding: 10px;
+
+  margin: 16px;
+}
+.title{
+  padding: 15px;
+}
+.label{
+  border-radius: 7px;
+  padding: 10px;
+}
 
 footer {
   position: absolute;
@@ -75,4 +103,16 @@ footer p {
 button:hover {
   background-color: white;
   color: black;
+}
+.button2{
+  font-family: "Montserrat", sans-serif;
+  border: none;
+  background-color: rgb(62, 62, 93);
+  border-radius: 15px;
+  color: white;
+  text-align: center;
+  font-size: 16px;
+  margin: 20px;
+  padding: 15px;
+  cursor: pointer;
 }
